Extend left-sidenav with extra options

--- a/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/left-sidenav/left-sidenav.component.html
@@ -3,13 +3,18 @@
 </button>
 
 <div class="flex-column gap-8 padding-8">
-    <div class="flex-column align-items-center" *ngIf="logoUrl">
-        <img ngSrc="{{ logoUrl }}" alt="Logo" width="80" height="120" />
-    </div>
+    <ng-container *ngIf="logoUrl">
+        <div class="flex-column logo-wrapper" [ngClass]="{ 'align-items-center': centerLogo }">
+            <img ngSrc="{{ logoUrl }}" alt="Logo" height="100" width="100" />
+        </div>
+    </ng-container>
     <div class="navigation-wrapper flex-column">
         <ng-container *ngFor="let navigationItem of navigationItems">
             <ng-container *ngTemplateOutlet="navigationItemTemplate; context: { navigationItem }"></ng-container>
         </ng-container>
+    </div>
+    <div class="bottom-content">
+        <ng-content select="[ppw-sidebar-bottom]"></ng-content>
     </div>
 </div>
 
@@ -21,7 +26,9 @@
         [style.margin-left]="level * 12 + 'px'"
         (click)="onClickNavigationItem(navigationItem)">
         <span class="navigation-item-link">
-            <i [class]="navigationItem.icon"></i>
+            <ng-container *ngIf="navigationItem.icon">
+                <i [class]="navigationItem.icon" class="ppw-navigation-icon"></i>
+            </ng-container>
             <span>{{ navigationItem.label | translate }}</span>
         </span>
         <i
