--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.theme.scss
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.theme.scss
@@ -9,7 +9,10 @@
     $primary-palette: map.get($color-config, 'primary');
 
     .mat-drawer.drawer-color {
-        background-color: mat.get-color-from-palette($primary-palette, 500);
+        $defaultBgColor: mat.get-color-from-palette($primary-palette, 500);
+        --ppw-sidenav-background-color: #{$defaultBgColor};
+
+        background-color: var(--ppw-sidenav-background-color);
     }
 }
 
