Update demo project theme and sidenav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<ppw-wireframe [navigationItems]="getNavigationItems()"><mat-icon>person</mat-icon></ppw-wireframe>
+<ppw-wireframe [navigationItems]="getNavigationItems()" [sidebarOptions]="sidebarOptions">
+    <ng-container ppw-toolbar-content><mat-icon>person</mat-icon></ng-container>
+</ppw-wireframe>
