Pass the background color of the nav-drawer via a variable instead of getting it via the theme

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.scss
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.scss
@@ -3,5 +3,9 @@ mat-drawer-container {
 
     mat-drawer {
         width: 300px;
+
+        &.drawer-color {
+            background-color: var(--ppw-sidenav-background-color);
+        }
     }
 }
