--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,14 @@ body {
     align-items: center;
 }
 
+.align-items-stretch {
+    align-items: stretch;
+}
+
+.align-content-space-between {
+    align-content: space-between;
+}
+
 .gap-8 {
     gap: 8px;
 }
