--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <ppw-wireframe [navigationItems]="getNavigationItems()" [sidebarOptions]="sidebarOptions">
     <ng-container ppw-toolbar-content><mat-icon>person</mat-icon></ng-container>
+    <ng-container ppw-sidebar-top-content></ng-container>
+    <ng-container ppw-sidebar-bottom-content
+        ><div class="version-info"><div>v0.0.2</div></div></ng-container
+    >
 </ppw-wireframe>
