Allow passing the appTitle to the wireframe

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -24,6 +24,7 @@
         <ppw-toolbar
             (toggleSidebar)="toggleSidebar()"
             [isSidenavOpen]="isSidenavOpen"
+            [appTitle]="toolbarOptions?.appTitle"
             [showMenuToggle]="isSmallDevice || (!isSidenavOpen && !isLargerDevice)">
             <ng-content select="[ppw-toolbar-content]"></ng-content>
         </ppw-toolbar>
