--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<ppw-wireframe [navigationItems]="getNavigationItems()" [sidebarOptions]="sidebarOptions">
+<ppw-wireframe
+    [navigationItems]="getNavigationItems()"
+    [sidebarOptions]="sidebarOptions"
+    [toolbarOptions]="toolbarOptions">
     <ng-container ppw-toolbar-content><mat-icon>person</mat-icon></ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
     <ng-container ppw-sidebar-bottom-content
