Add expandable-card component

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,1 +1,6 @@
-<p>demo works!</p>
+<ppw-expandable-card [cardTitle]="'Demo card which cannot be collapsed'" [canBeCollapsed]="false">
+    <div>card contents</div>
+</ppw-expandable-card>
+<ppw-expandable-card [cardTitle]="'Demo card which can be collapsed'">
+    <div>card contents</div>
+</ppw-expandable-card>
