--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,10 @@ body {
     .mat-mdc-card-title {
         --mat-card-title-text-size: 16px;
     }
+
+    --mat-expansion-header-text-color: white;
+    --mat-expansion-header-background-color: #6eb343;
+    --mat-expansion-header-indicator-color: white;
 }
 
 .no-margins {
