--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -4,3 +4,4 @@
 <ppw-expandable-card [cardTitle]="'Demo card which can be collapsed'">
     <div>card contents</div>
 </ppw-expandable-card>
+<ppw-table [columns]="columns" [data]="data"></ppw-table>
