--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<ppw-wireframe
-    [navigationItems]="getNavigationItems()"
-    [sidebarOptions]="sidebarOptions"
-    [toolbarOptions]="toolbarOptions">
+<ppw-wireframe [navigationItems]="getNavigationItems()" [sidebarOptions]="sidebarOptions">
     <ng-container ppw-toolbar-content><mat-icon>person</mat-icon></ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
     <ng-container ppw-sidebar-bottom-content
