Add row selection to the table component

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.scss
@@ -13,4 +13,8 @@ mat-card {
     .column-type-number {
         text-align: right;
     }
+
+    .mat-column-rowSelection {
+        width: 72px;
+    }
 }
