Extend filter table example to use fixed column widths

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -20,6 +20,7 @@
             [columns]="columns"
             [data]="data"
             [enableRowSelection]="true"
+            [options]="tableOptions"
             (selectionChanged)="updateSelected($event)"></ppw-table>
     </mat-card-content>
 </mat-card>
