--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -11,6 +11,7 @@
             [logoUrl]="sidebarOptions?.logoUrl"
             [logoHeight]="sidebarOptions?.logoHeight ?? 100"
             [logoWidth]="sidebarOptions?.logoWidth ?? 100"
+            [navigationItemFontSize]="sidebarOptions?.navigationItemFontSize ?? 'unset'"
             [showMenuCloseButton]="isXSmallDevice">
             <div ppw-sidebar-top>
                 <ng-content select="[ppw-sidebar-top-content]"></ng-content>
