Add support to pass a rowClickAction to the table options

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -43,5 +43,9 @@
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-    <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+    <tr
+        mat-row
+        *matRowDef="let row; columns: columnNames"
+        [class.clickable]="options?.rowClickAction"
+        (click)="options?.rowClickAction ? options?.rowClickAction(row.initialRecord) : null"></tr>
 </table>
