Add support to highlight table rows on hover

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -46,6 +46,7 @@
     <tr
         mat-row
         *matRowDef="let row; columns: columnNames"
+        [class.highlight]="options?.rowHighlightOnHover"
         [class.clickable]="options?.rowClickAction"
         (click)="options?.rowClickAction ? options?.rowClickAction(row.initialRecord) : null"></tr>
 </table>
