--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -1,51 +1,57 @@
-<table mat-table class="table-2" [dataSource]="dataSource">
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="rowSelection" *ngIf="enableRowSelection">
-        <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox
-                color="primary"
-                [style.width]="options?.columnWidths?.['rowSelection']"
-                (change)="$event ? masterToggle() : null"
-                [checked]="selection.hasValue() && isAllSelected()"
-                [indeterminate]="selection.hasValue() && !isAllSelected()">
-            </mat-checkbox>
-        </th>
-        <td mat-cell *matCellDef="let row">
-            <mat-checkbox
-                color="primary"
-                [style.width]="options?.columnWidths?.['rowSelection']"
-                (change)="$event ? selection.toggle(row) : null"
-                [checked]="selection.isSelected(row)">
-            </mat-checkbox>
-        </td>
-    </ng-container>
+<section
+    class="table-container"
+    [style.max-height]="options?.tableHeight ?? 'auto'"
+    [style.padding-right.px]="options?.tableHeight ? 16 : undefined"
+    [style.overflow]="options?.tableHeight ? 'auto' : undefined">
+    <table mat-table class="table-2" [dataSource]="dataSource">
+        <!-- Checkbox Column -->
+        <ng-container matColumnDef="rowSelection" *ngIf="enableRowSelection">
+            <th mat-header-cell *matHeaderCellDef>
+                <mat-checkbox
+                    color="primary"
+                    [style.width]="options?.columnWidths?.['rowSelection']"
+                    (change)="$event ? masterToggle() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row">
+                <mat-checkbox
+                    color="primary"
+                    [style.width]="options?.columnWidths?.['rowSelection']"
+                    (change)="$event ? selection.toggle(row) : null"
+                    [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+            </td>
+        </ng-container>
 
-    <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
-        <th
-            mat-header-cell
-            [style.width]="options?.columnWidths?.[column.name]"
-            *matHeaderCellDef
-            class="column-type-{{ column.type }}">
-            {{ column.label }}
-        </th>
-        <td
-            mat-cell
-            [style.width]="options?.columnWidths?.[column.name]"
-            *matCellDef="let record"
-            (click)="executeRowClick(record.initialRecord, column.name)"
-            class="column-type-{{ column.type }}">
-            <ng-container
-                ppwDynamicCell
-                [column]="column"
-                [record]="record.initialRecord"
-                [value]="record.mappedValues[column.name]"></ng-container>
-        </td>
-    </ng-container>
+        <ng-container *ngFor="let column of columns" [matColumnDef]="column.name">
+            <th
+                mat-header-cell
+                [style.width]="options?.columnWidths?.[column.name]"
+                *matHeaderCellDef
+                class="column-type-{{ column.type }}">
+                {{ column.label }}
+            </th>
+            <td
+                mat-cell
+                [style.width]="options?.columnWidths?.[column.name]"
+                *matCellDef="let record"
+                (click)="executeRowClick(record.initialRecord, column.name)"
+                class="column-type-{{ column.type }}">
+                <ng-container
+                    ppwDynamicCell
+                    [column]="column"
+                    [record]="record.initialRecord"
+                    [value]="record.mappedValues[column.name]"></ng-container>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
-    <tr
-        mat-row
-        *matRowDef="let row; columns: columnNames"
-        [class.highlight]="options?.rowHighlightOnHover"
-        [class.clickable]="options?.rowClickAction"></tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="columnNames; sticky: !!options?.tableHeight"></tr>
+        <tr
+            mat-row
+            *matRowDef="let row; columns: columnNames"
+            [class.highlight]="options?.rowHighlightOnHover"
+            [class.clickable]="options?.rowClickAction"></tr>
+    </table>
+</section>
