Update table demo with sticky header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,3 +171,27 @@ body {
 mat-card.highlighted-card {
     background-color: mat.get-color-from-palette($ppw-ui-accent);
 }
+
+.table-container::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    border-radius: 5px;
+    background-color: #ddd;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: mat.get-color-from-palette($ppw-ui-primary);
+}
+
+.table-container::-webkit-scrollbar-button,
+.table-container::-webkit-scrollbar-track,
+.table-container::-webkit-scrollbar-track-piece,
+.table-container::-webkit-scrollbar-corner,
+.table-container::-webkit-resizer {
+    display: none;
+}
+
+.table-container::-webkit-scrollbar-track-piece:start {
+    margin-top: 200px;
+}
