--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -2,7 +2,7 @@
     <mat-drawer
         [mode]="isXSmallDevice ? 'over' : 'side'"
         [ngClass]="isXSmallDevice ? 'drawer-full-width' : 'drawer'"
-        [opened]="!isSmallDevice && !isXSmallDevice"
+        [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
         class="drawer-color">
         <ppw-left-sidenav
             (closeSidebar)="closeSidebar()"
@@ -12,7 +12,7 @@
             [logoHeight]="sidebarOptions?.logoHeight ?? 100"
             [logoWidth]="sidebarOptions?.logoWidth ?? 100"
             [navigationItemFontSize]="sidebarOptions?.navigationItemFontSize ?? 'unset'"
-            [showMenuCloseButton]="isXSmallDevice">
+            [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice">
             <div ppw-sidebar-top>
                 <ng-content select="[ppw-sidebar-top-content]"></ng-content>
             </div>
@@ -26,7 +26,11 @@
             <ppw-toolbar
                 (toggleSidebar)="toggleSidebar()"
                 [isSidenavOpen]="isSidenavOpen"
-                [showMenuToggle]="isSmallDevice || (!isSidenavOpen && !isLargerDevice)">
+                [showMenuToggle]="
+                    (!!sidebarOptions?.closedByDefaultOnLargerDevice && !isSidenavOpen) ||
+                    (!sidebarOptions?.closedByDefaultOnLargerDevice &&
+                        (isSmallDevice || (!isSidenavOpen && !isLargerDevice)))
+                ">
                 <ng-content select="[ppw-toolbar-content]"></ng-content>
             </ppw-toolbar>
             <div class="ppw-page-content">
