Make sure the sidebar comes of the opened screen when closedByDefaultOnLargerDevice is true

--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,7 +1,7 @@
 <mat-drawer-container class="app-wireframe-container">
     <mat-drawer
-        [mode]="isXSmallDevice ? 'over' : 'side'"
-        [ngClass]="isXSmallDevice ? 'drawer-full-width' : 'drawer'"
+        [mode]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'over' : 'side'"
+        [ngClass]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'"
         [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
         class="drawer-color">
         <ppw-left-sidenav
