--- a/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
                 <mat-icon>close</mat-icon>
             </ng-template>
         </button>
-        <span *ngIf="title" class="page-title">{{ title }}</span>
+        <span *ngIf="showPageTitle && title" class="page-title">{{ title }}</span>
     </div>
     <div class="right-section padding-8">
         <ng-content></ng-content>
