--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -26,6 +26,7 @@
             <ppw-toolbar
                 (toggleSidebar)="toggleSidebar()"
                 [isSidenavOpen]="isSidenavOpen"
+                [showPageTitle]="!!sidebarOptions?.showPageTitle"
                 [showMenuToggle]="
                     (!!sidebarOptions?.closedByDefaultOnLargerDevice && !isSidenavOpen) ||
                     (!sidebarOptions?.closedByDefaultOnLargerDevice &&
