--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -27,6 +27,7 @@
                 (toggleSidebar)="toggleSidebar()"
                 [isSidenavOpen]="isSidenavOpen"
                 [showPageTitle]="!!sidebarOptions?.showPageTitle"
+                [toolbarHeightPx]="toolbarHeightPx"
                 [showMenuToggle]="
                     (!!sidebarOptions?.closedByDefaultOnLargerDevice && !isSidenavOpen) ||
                     (!sidebarOptions?.closedByDefaultOnLargerDevice &&
