Give ng-content a name so more than 1 ng-content can be put on the toolbar component

--- a/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/toolbar/toolbar.component.html
@@ -9,6 +9,6 @@
         <span *ngIf="showPageTitle && title" class="page-title">{{ title }}</span>
     </div>
     <div class="right-section padding-8">
-        <ng-content></ng-content>
+        <ng-content select="[ppw-toolbar-right-content]"></ng-content>
     </div>
 </div>
