--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
     [navigationItems]="getNavigationItems()"
     [sidebarOptions]="sidebarOptions"
     [toolbarHeightPx]="toolbarHeightPx">
-    <ng-container ppw-toolbar-content><mat-icon>person</mat-icon></ng-container>
+    <ng-container ppw-toolbar-content>
+        <mat-icon>person</mat-icon>
+    </ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
     <ng-container ppw-sidebar-bottom-content
         ><div class="version-info"><div>v0.0.29</div></div></ng-container
