--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -37,7 +37,7 @@
                     ><ng-content select="[ppw-toolbar-left-content]"></ng-content
                 ></ng-container>
                 <ng-container ppw-toolbar-right-content>
-                    <ng-content select="[ppw-toolbar-content]"></ng-content>
+                    <ng-content select="[ppw-toolbar-right-content]"></ng-content>
                 </ng-container>
             </ppw-toolbar>
             <div class="ppw-page-content">
