--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
             width="{{ toolbarLogoWidth }}"
             priority="eager"
     /></ng-container>
-    <ng-container ppw-toolbar-content>
+    <ng-container ppw-toolbar-right-content>
         <mat-icon>person</mat-icon>
     </ng-container>
     <ng-container ppw-sidebar-top-content></ng-container>
