Add option to configure column header styling

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -29,6 +29,7 @@
             <th
                 mat-header-cell
                 [style.width]="options?.columnWidths?.[column.name]"
+                [ngStyle]="options?.columnHeaderStyles?.[column.name]?.()"
                 *matHeaderCellDef
                 class="column-type-{{ column.type }}">
                 {{ column.label }}
