--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,6 +94,8 @@ body {
     --ppw-expandable-card-header-text-color: white;
     --ppw-expandable-card-header-background-color: #6eb343;
     --ppw-expandable-card-header-indicator-color: white;
+
+    --ppw-message-bar-warning-text-color: black;
 }
 
 .no-margins {
